--- a/stylesheets/css/main.css
+++ b/stylesheets/css/main.css
@@ -46,6 +46,7 @@ table {
 	border-collapse: collapse;
 	border-spacing: 0;
 }
-.red{
-	color: red;
+.blue{
+	color: blue;
+	background: lightblue;
 }
